--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #060d0f;
 }
 
 @keyframes App-logo-spin {
@@ -36,3 +36,6 @@
     transform: rotate(360deg);
   }
 }
+
+
+
